--- a/src/app/questiontype/sequence/sequence.component.html
+++ b/src/app/questiontype/sequence/sequence.component.html
@@ -1,50 +1,18 @@
 <div class="row">
-  <div class="col-sm-12">
-    <h3>Correct sequence</h3>
-    <table class="table no-border sequence-table">
-      <thead>
-        <tr>
-          <th>Answer in Correct Sequence</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <div class="input-holder add">
-              <input type="text" value="Contuct a test Assessment" class="form-control"> </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="input-holder add">
-              <input type="text" value="Contuct a test Assessment" class="form-control"> </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="input-holder add">
-              <input type="text" value="Contuct a test Assessment" class="form-control"> </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="input-holder add">
-              <input type="text" value="Contuct a test Assessment" class="form-control"> </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="input-holder add">
-              <input type="text" value="Contuct a test Assessment" class="form-control"> </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="input-holder add">
-              <input type="text" value="Contuct a test Assessment" class="form-control"> </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="col-sm-12">
+      <h3 [innerHTML]="content.name | safeHtml"></h3>
+      <table class="table no-border sequence-table">
+        <thead>
+        </thead>
+        <tbody>
+            <tr dropDirective [dragDirective]='c' (dragoverMouseEvent)="dragoverMouse($event)" (dropEvent)="addDropItem($event,i)" (releaseDrop)="releaseDrop($event, i)" *ngFor="let c of choices let i = index" (startDrag)="startDrag(c)" >
+                <td draggable="true">
+                  <div class="input-holder add">
+                    <span class="answer-text">{{c.answer}}</span>
+                  </div>
+                </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-</div>
