--- a/src/app/questiontype/sequence/sequence.component.html
+++ b/src/app/questiontype/sequence/sequence.component.html
@@ -1,3 +1,4 @@
+<div attr.id="{{'tab'+index}}" class="section" > 
 <div class="row">
     <div class="col-sm-12">
       <h3 [innerHTML]="content.name | safeHtml"></h3>
@@ -15,4 +16,5 @@
         </tbody>
       </table>
     </div>
+  </div>
   </div>
