--- a/src/app/questiontype/sequence/sequence.component.html
+++ b/src/app/questiontype/sequence/sequence.component.html
@@ -2,6 +2,7 @@
 <div class="row">
     <div class="col-sm-12">
       <h3 [innerHTML]="content.name | safeHtml"></h3>
+      <p><strong>{{question.question}}</strong></p>
       <table class="table no-border sequence-table">
         <thead>
         </thead>
